--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-test
+<!doctype html>
+<html>
+  <head>
+		<title>InfoKRL</title>
+		<script>
+			window.location='http://www.transvivaglobal.com/infokrl/';
+		</script>
+		<style>
+			body {
+				background-color:black;
+			}
+		</style>
+	<body>		
+	</body>
+</html>
